# enigma2

./: .gitignore  LICENSE
usr/lib/enigma2/python/: API.py  Navigation.py  RecordTimer.py  ServiceReference.py  (+8 more)
usr/lib/pkgconfig/: enigma2.pc
usr/share/enigma2/: animations.xml  defaultsatlists.xml  defaultwizard.xml  encoding.conf  keymap.xml  menu.xml  rcpositions.xml  restorewizard.xml  setup.xml  skin.xml  skin_default.xml  skin_default_1080.xml  startwizard.xml  unicable.xml
usr/share/enigma2/menu/: Makefile.am
usr/share/meta/: index-enigma2.xml  plugin_bludiscplayer.xml  plugin_browser.xml  plugin_cleanupwizard.xml  plugin_commoninterfaceassignment.xml  plugin_crashlogautosubmit.xml  plugin_cutlisteditor.xml  plugin_dbusinterfaceproxy.xml  plugin_defaultservicesscanner.xml  plugin_devshell.xml  plugin_diseqctester.xml  plugin_dvdburn.xml  plugin_dvdplayer.xml  plugin_frontprocessorupgrade.xml  plugin_fsblupdater.xml  plugin_graphmultiepg.xml  plugin_hbbtv.xml  plugin_hdmicec.xml  plugin_hotplug.xml  plugin_inputdevicemanager.xml  plugin_jsonapi.xml  plugin_mediadatabasemanager.xml  plugin_mediaplayer.xml  plugin_mediarenderer.xml  plugin_mediascanner.xml  plugin_minidlnasetup.xml  plugin_networkmanager.xml  plugin_networksetup.xml  plugin_pictureplayer.xml  plugin_positionersetup.xml  plugin_remotecontrolselection.xml  plugin_satelliteequipmentcontrol.xml  plugin_satfinder.xml  plugin_skinselector.xml  plugin_socketmmi.xml  plugin_softwaremanager.xml  plugin_streamserver.xml  plugin_streamserversetup.xml  plugin_streamservices.xml  plugin_tempfancontrol.xml  (+5 more)
(+531 files in other folders)
