installdir = $(pkgdatadir)/menu

dist_install_DATA = \
	animation_setup.png \
	av_setup.png \
	bludiscplayer.png \
	BluePanel.png \
	ci_assign.png \
	ci_setup.png \
	default_lists.png \
	devices_selection.png \
	display_setup.png \
	dvd_player.png \
	factory_reset.png \
	hardisk_selection.png \
	hbbtv_browser.png \
	hdmi_cec.png \
	info_screen.png \
	input_device_setup.png \
	keyboard_setup.png \
	language_setup.png \
	Makefile.am \
	manual_scan.png \
	mc_movies.png \
	mc_music.png \
	mc_pictures.png \
	mediacenter.png \
	media_player.png \
	network_setup.png \
	network_tools.png \
	nwbrowser.png \
	nwmntmng.png \
	osd_video_audio_selection.png \
	parental_setup.png \
	plugin_selection.png \
	pzyP4T.png \
	record_paths.png \
	restart_enigma.png \
	restart.png \
	service_searching_selection.png \
	services_recordings_selection.png \
	setup_selection.png \
	skin_selector.png \
	sleep.png \
	standby.png \
	standby_restart_list.png \
	system_selection.png \
	timer_edit.png \
	timezone_setup.png \
	tuner_setup.png \
	undefinied.png \
	upnp_setup.png \
	usage_setup.png \
	video_db_movies.png \
	video_db_tv_series.png \
	web_browser.png
